Updated limits and variables files to match standard TCCON QA/QC

--- a/inputs/limits.toml
+++ b/inputs/limits.toml
@@ -2,9 +2,9 @@
 solzen = [0, 90]
 
 xluft = [0.975, 1.025]
-xch4 = [1.6, 2.0]
+xch4 = [1.6, 2.1]
 xch4_error = [0, 0.05]
-xco = [0, 200]
+xco = [0, 250]
 xco_error = [0, 10]
 xn2o = [200, 400]
 xn2o_error = [0, 25]
@@ -14,12 +14,14 @@ xh2o = [0, 10000]
 xh2o_error = [0, 100]
 xhf_error = [0, 50]
 
-dip = [-0.05, 0.05]
-mvd = [-5, 250]
-lse = [-0.1, 0.1]
-lsu = [0, 0.06]
+dip = [-0.001, 0.001]
+mvd = [-5, 25]
+lse = [-4e-4, 4e-4]
+lsu = [0, 0.0004]
 fvsi = [0, 20]
-
+"o2_7885_sg" = [-3.5, 3.5]
+"o2_7885_fs" = [-0.75, 0.75]
+"o2_7885_cl" = [-0.1, 0.5]
 "*vsf_h2o*" = [0.3, 2]
 "*vsf_hdo*" = [0.3, 2]
 "*vsf_hf*" = [0.3, 2]
@@ -33,4 +35,27 @@ fvsi = [0, 20]
 "*_cfperiod" = [-1, 50]
 
 [rolling-derivative]
-zco2_4852a_zo = [-1e-4, 1e-4]
+zco2_4852a_zo = [-3e-5, 3e-5]
+
+[delta-timeseries]
+pout = [-10, 10]
+pmod = [-10, 10]
+tout = [-15, 15]
+tmod = [-15, 15]
+
+[delta-rolling-timeseries]
+pout = [-3, 3]
+pmod = [-3, 3]
+zmin = [-0.1, 0.1]
+zobs = [-0.1, 0.1]
+
+[zmin-zobs-delta-rolling-timeseries]
+zmin = [-0.1, 0.1]
+zobs = [-0.1, 0.1]
+
+[delta-timing-error-am-pm]
+xluft =[-0.025, 0.025]
+
+#["delta-timeseries+violin"]
+#pout = [-10, 10]
+#pmod = [-10, 10]
