--- a/environment.yml
+++ b/environment.yml
@@ -6,11 +6,11 @@ dependencies:
   - matplotlib=3.3.2
   - matplotlib-base=3.3.2
   - netcdf4=1.5.4
-  - numpy
-  - pandas
-  - pillow
+  - numpy=1.21
+  - pandas=1.3
+  - pillow=8
   - pip=21
-  - pypdf2
+  - pypdf2=2
   - python=3.7
   - scipy=1.6.1
   - pip:
